# rqsp

./: Cargo.toml  config.json  readme.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  server_cfg.rs  sock.rs
uselib/: Cargo.toml
uselib/src/: client_config.rs  jsonfile.rs  lib.rs  logger.rs  quic.rs  server_config.rs
